docs/apache-airflow-providers-amazon/9.1.0/_sources/_api/airflow/providers/amazon/aws/hooks/athena/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.hooks.athena`
===================================================

.. py:module:: airflow.providers.amazon.aws.hooks.athena

.. autoapi-nested-parse::

   This module contains AWS Athena hook.

   .. spelling:word-list::

       PageIterator



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.athena.AthenaHook



Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.athena.query_params_to_string



Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.athena.MULTI_LINE_QUERY_LOG_PREFIX


.. py:data:: MULTI_LINE_QUERY_LOG_PREFIX
   :value: Multiline-String

    .. raw:: html

        <details><summary>Show Value</summary>

    .. code-block:: python

        """
        		"""

    .. raw:: html

        </details>

   

.. py:function:: query_params_to_string(params)


.. py:class:: AthenaHook(*args, log_query = True, **kwargs)


   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   Interact with Amazon Athena.

   Provide thick wrapper around
   :external+boto3:py:class:`boto3.client("athena") <Athena.Client>`.

   :param log_query: Whether to log athena query and other execution params
       when it's executed. Defaults to *True*.

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       - :class:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   .. py:attribute:: INTERMEDIATE_STATES
      :value: ('QUEUED', 'RUNNING')

      

   .. py:attribute:: FAILURE_STATES
      :value: ('FAILED', 'CANCELLED')

      

   .. py:attribute:: SUCCESS_STATES
      :value: ('SUCCEEDED',)

      

   .. py:attribute:: TERMINAL_STATES
      :value: ('SUCCEEDED', 'FAILED', 'CANCELLED')

      

   .. py:method:: run_query(query, query_context, result_configuration, client_request_token = None, workgroup = 'primary')

      Run a Trino/Presto query on Athena with provided config.

      .. seealso::
          - :external+boto3:py:meth:`Athena.Client.start_query_execution`

      :param query: Trino/Presto query to run.
      :param query_context: Context in which query need to be run.
      :param result_configuration: Dict with path to store results in and
          config related to encryption.
      :param client_request_token: Unique token created by user to avoid
          multiple executions of same query.
      :param workgroup: Athena workgroup name, when not specified, will be ``'primary'``.
      :return: Submitted query execution ID.


   .. py:method:: get_query_info(query_execution_id, use_cache = False)

      Get information about a single execution of a query.

      .. seealso::
          - :external+boto3:py:meth:`Athena.Client.get_query_execution`

      :param query_execution_id: Id of submitted athena query
      :param use_cache: If True, use execution information cache


   .. py:method:: check_query_status(query_execution_id, use_cache = False)

      Fetch the state of a submitted query.

      .. seealso::
          - :external+boto3:py:meth:`Athena.Client.get_query_execution`

      :param query_execution_id: Id of submitted athena query
      :return: One of valid query states, or *None* if the response is
          malformed.


   .. py:method:: get_state_change_reason(query_execution_id, use_cache = False)

      Fetch the reason for a state change (e.g. error message). Returns None or reason string.

      .. seealso::
          - :external+boto3:py:meth:`Athena.Client.get_query_execution`

      :param query_execution_id: Id of submitted athena query


   .. py:method:: get_query_results(query_execution_id, next_token_id = None, max_results = 1000)

      Fetch submitted query results.

      .. seealso::
          - :external+boto3:py:meth:`Athena.Client.get_query_results`

      :param query_execution_id: Id of submitted athena query
      :param next_token_id:  The token that specifies where to start pagination.
      :param max_results: The maximum number of results (rows) to return in this request.
      :return: *None* if the query is in intermediate, failed, or cancelled
          state. Otherwise a dict of query outputs.


   .. py:method:: get_query_results_paginator(query_execution_id, max_items = None, page_size = None, starting_token = None)

      Fetch submitted Athena query results.

      .. seealso::
          - :external+boto3:py:class:`Athena.Paginator.GetQueryResults`

      :param query_execution_id: Id of submitted athena query
      :param max_items: The total number of items to return.
      :param page_size: The size of each page.
      :param starting_token: A token to specify where to start paginating.
      :return: *None* if the query is in intermediate, failed, or cancelled
          state. Otherwise a paginator to iterate through pages of results.

      Call :meth`.build_full_result()` on the returned paginator to get all
      results at once.


   .. py:method:: poll_query_status(query_execution_id, max_polling_attempts = None, sleep_time = None)

      Poll the state of a submitted query until it reaches final state.

      :param query_execution_id: ID of submitted athena query
      :param max_polling_attempts: Number of times to poll for query state before function exits
      :param sleep_time: Time (in seconds) to wait between two consecutive query status checks.
      :return: One of the final states


   .. py:method:: get_output_location(query_execution_id)

      Get the output location of the query results in S3 URI format.

      .. seealso::
          - :external+boto3:py:meth:`Athena.Client.get_query_execution`

      :param query_execution_id: Id of submitted athena query


   .. py:method:: stop_query(query_execution_id)

      Cancel the submitted query.

      .. seealso::
          - :external+boto3:py:meth:`Athena.Client.stop_query_execution`

      :param query_execution_id: Id of submitted athena query



